# NBodyWasm

./: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
assets/: index-9fd27eea.css  n_body_wasm_bg-c4d2c2c0.wasm
src/: App.tsx  index.html  index.tsx
src/components/: NBodyCanvas.tsx
src/simulation/: local_simulation.ts  rust_simulation.ts  rust_simulation_bh.ts  simulation.ts
src/types/: assets.d.ts
src/utils/: celestial_object_generator.ts  control_panel.ts  utils.ts  vector3.ts
src/wasm/: Cargo.toml
src/wasm/src/: celestial.rs  lib.rs  octree.rs
