[package]
name = "n-body-wasm"
version = "0.1.0"
authors = ["chrislandonross@gmail.com"]
description = "n-body-wasm"
license = "MIT/Apache-2.0"
repository = "https://github.com/fightingsleep"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32.3"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]